// Copyright 2021 Paingha Joe Alagoa. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

option go_package = "recipe";

import "google/protobuf/timestamp.proto";

service Recipe {
    rpc GetRecipe(GetRecipeRequest) returns (GetRecipeResponse){};
    rpc GetAllRecipes(GetAllRecipesRequest) returns (GetAllRecipesResponse){};
    rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse){};
    rpc DeleteRecipe(DeleteRecipeRequest) returns (DeleteRecipeResponse){};
    rpc UpdateRecipe(UpdateRecipeRequest) returns (UpdateRecipeResponse){};
}

message CreateRecipeRequest{
    string Title = 1;
    string Content = 2;
    string Active = 3;
    string Summary = 4;
    string FeaturedImage = 5;
}

message CreateRecipeResponse{
    int32 ID = 1;
    string Title = 2;
    string Content = 3;
    string Active = 4;
    string Summary = 5;
    string Slug = 6;
    string FeaturedImage = 7;
    string Message = 8;
}

message UpdateRecipeRequest{
    int32 ID = 1;
    string Title = 2;
    string Content = 3;
    string Active = 4;
    string Summary = 5;
    string Slug = 6;
    string FeaturedImage = 7;
}

message UpdateRecipeResponse{
    string Title = 1;
    string Content = 2;
    string Active = 3;
    string Summary = 4;
    string Slug = 5;
    string FeaturedImage = 6;
    string Message = 7;
}

message DeleteRecipeRequest {
    int32 ID = 1;
}

message DeleteRecipeResponse {
    string Message = 1;
}

message GetRecipeRequest {
    int32 ID = 1;
}

message GetRecipeResponse {
    int32 ID = 1;
    string Title = 2;
    string Content = 3;
    string Active = 4;
    string Summary = 5;
    string Slug = 6;
    string FeaturedImage = 7;
    string Message = 8;
    google.protobuf.Timestamp CreatedAt = 9;
    google.protobuf.Timestamp UpdatedAt = 10;
}

message GetAllRecipesRequest {
    int32 PageNumber = 1;
    int32 ResultPerPage = 2;
}

message GetAllRecipesResponse {
    int32 TotalCount = 1;
    int32 PageNumber = 2;
    int32 ResultPerPage = 3;
    repeated GetRecipeResponse Recipes = 4;
}